# blf

./: .gitignore  Cargo.toml  README.MD  publish.py
blf_lib/: Cargo.toml  README.MD
blf_lib/src/: blam.rs  blf.rs  io.rs  lib.rs  result.rs  types.rs
blf_lib/src/blam/: common.rs  halo3.rs  haloreach.rs  haloreach_mcc.rs
blf_lib/src/blam/common/: cseries.rs  data_mining.rs  math.rs  memory.rs
blf_lib/src/blam/common/cache/: cache_files.rs
blf_lib/src/blam/common/cseries/: cseries_events.rs
blf_lib/src/blam/common/data_mining/: data_mine_management.rs
blf_lib/src/blam/common/math/: integer_math.rs  real_math.rs  unit_vector_quanitzation.rs
blf_lib/src/blam/common/memory/: crc.rs  data_compress.rs  secure_signature.rs
blf_lib/src/blam/common/simulation/: simulation_encoding.rs
blf_lib/src/blam/halo3/: release.rs
blf_lib/src/blam/halo3/release/: io.rs
blf_lib/src/blam/halo3/release/game/: game_engine_assault.rs  game_engine_ctf.rs  game_engine_default.rs  (+12 more)
blf_lib/src/blam/halo3/v08172_07_03_08_2240_delta/: saved_games.rs
blf_lib/src/blam/halo3/v10015_07_05_14_2217_delta/: game.rs  saved_games.rs
blf_lib/src/blam/halo_3/release/: game.rs
blf_lib/src/blam/haloreach/: release.rs  v09730_10_04_09_1309_omaha_delta.rs  v12065_11_08_24_1738_tu1actual.rs
blf_lib/src/blam/haloreach/release/: memory.rs
blf_lib/src/blam/haloreach/v08516_10_02_19_1607_omaha_alpha/: game.rs
blf_lib/src/blam/haloreach/v09730_10_04_09_1309_omaha_delta/: game.rs
blf_lib/src/blam/haloreach/v11860_10_07_24_0147_omaha_release/: game.rs
blf_lib/src/blam/haloreach/v12065_11_08_24_1738_tu1actual/: game.rs  math.rs  networking.rs
blf_lib/src/blam/haloreach_mcc/v_untracked_25_08_16_1352/: game.rs
blf_lib/src/blf/: chunks.rs  versions.rs
blf_lib/src/blf/chunks/: ares.rs  halo3.rs  haloonline.rs  haloreach.rs  haloreach_mcc.rs  mcc.rs
blf_lib/src/blf/chunks/ares/: v_untracked_ares.rs
blf_lib/src/blf/chunks/halo3/: v06481_06_11_17_1330_alpha_release.rs  v08117_07_03_07_1702_delta.rs  v08172_07_03_08_2240_delta.rs  v10015_07_05_14_2217_delta.rs  v11855_07_08_20_2317_halo3_ship.rs  v12070_08_09_05_2031_halo3_ship.rs
blf_lib/src/blf/chunks/halo3odst/: v13895_09_04_27_2201_atlas_release.rs
blf_lib/src/blf/chunks/haloreach/: v08516_10_02_19_1607_omaha_alpha.rs  v09449_10_03_25_1545_omaha_beta.rs  v09730_10_04_09_1309_omaha_delta.rs  v11860_10_07_24_0147_omaha_release.rs  v12065_11_08_24_1738_tu1actual.rs
blf_lib/src/blf/chunks/haloreach_mcc/: v_untracked_25_08_19_1352.rs
blf_lib/src/blf/chunks/mcc/: v2025_08_16_178512_1_release.rs
blf_lib/src/blf/versions/: ares.rs  destiny.rs  halo3.rs  haloonline.rs  haloreach.rs  haloreach_mcc.rs  mcc.rs
blf_lib/src/blf/versions/ares/: v_untracked_ares.rs
blf_lib/src/blf/versions/destiny/: v36735_13_12_02_1953_alpha.rs
blf_lib/src/blf/versions/halo3/: v06481_06_11_17_1330_alpha_release.rs  v08117_07_03_07_1702_delta.rs  v08172_07_03_08_2240_delta.rs  v09699_07_05_01_1534_delta.rs  v10015_07_05_14_2217_delta.rs  v11637_07_08_02_2348_release.rs  v11729_07_08_10_0021_main.rs  v11855_07_08_20_2317_halo3_ship.rs  v11856_07_08_20_2332_release.rs  v11902_08_01_16_1426_halo3_ship.rs  v12070_08_09_05_2031_halo3_ship.rs  v_untracked_07_03_09_2215.rs
blf_lib/src/blf/versions/halo3odst/: v13895_09_04_27_2201_atlas_release.rs
blf_lib/src/blf/versions/haloonline/: v1_106708_cert_ms23___release.rs
blf_lib/src/blf/versions/haloreach/: v08516_10_02_19_1607_omaha_alpha.rs  v09449_10_03_25_1545_omaha_beta.rs  v09664_10_04_06_2121_omaha_beta.rs  v09730_10_04_09_1309_omaha_delta.rs  v11860_10_07_24_0147_omaha_release.rs  v11883_10_10_25_1227_dlc_1_ship.rs  v12065_11_08_24_1738_tu1actual.rs
blf_lib/src/blf/versions/haloreach_mcc/: v_untracked_25_08_16_1352.rs  v_untracked_25_08_19_1352.rs
blf_lib/src/blf/versions/mcc/: v2025_08_16_178512_1_release.rs  v_25_08_16.rs
blf_lib/src/io/: bitstream.rs
blf_lib/src/io/bitstream/: bitstream_reader.rs  bitstream_writer.rs
blf_lib/src/types/: array.rs  bitfield.rs  bool.rs  build_number_identifier.rs  byte_order_mark.rs  c_string.rs  enum.rs  net.rs  numbers.rs  string.rs  time.rs  u64.rs
blf_lsp/: Cargo.toml  README.MD  config.json
blf_lsp-npm/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  types.d.ts
blf_lsp-npm/.github/workflows/: CI.yml
blf_lsp-npm/npm/android-arm-eabi/: README.md  package.json
blf_lsp-npm/npm/android-arm64/: README.md  package.json
blf_lsp-npm/npm/darwin-arm64/: README.md  package.json
blf_lsp-npm/npm/darwin-x64/: README.md  package.json
blf_lsp-npm/npm/freebsd-x64/: README.md  package.json
blf_lsp-npm/npm/linux-arm-gnueabihf/: README.md  package.json
blf_lsp-npm/npm/linux-arm64-gnu/: README.md  package.json
blf_lsp-npm/npm/linux-arm64-musl/: README.md  package.json
blf_lsp-npm/npm/linux-x64-gnu/: README.md  package.json
blf_lsp-npm/npm/linux-x64-musl/: README.md  package.json
blf_lsp-npm/npm/win32-arm64-msvc/: README.md  package.json
blf_lsp-npm/npm/win32-ia32-msvc/: README.md  package.json
blf_lsp-npm/npm/win32-x64-msvc/: README.md  package.json
blf_lsp-npm/src/: lib.rs
blf_lsp/src/: halo3.rs  haloreach.rs  lib.rs
blf_lsp/src/halo3/: user.rs  v12070_08_09_05_2031_halo3_ship.rs
blf_lsp/src/haloreach/: v12065_11_08_24_1738_tu1actual.rs
test_harness/: Cargo.toml
test_harness/scripts/: probe_ts_tu1.mjs
test_harness/src/: lib.rs  main.rs  megalo_roundtrip.rs
test_harness/tests/: megalo_roundtrip.rs
(+821 files in other folders)
