[workspace]
resolver = "2"
members = [ "blf_lib-derivable", "blf_lib-derive", "blf_lib", 'blf_cli' , "blf_wasm", "blf_lsp"]

[workspace.package]
version = "1.7.0-pre23"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde-hex = { git = "https://github.com/Blam-Network/serde-hex.git", version = "0.1.0" }