[package]
name = "blf_lib"
description = "Multi-purpose Blam-File library."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
libc = "0.2"
blf_lib-derivable = { path = "../blf_lib-derivable", version = "1.8.0-test-2" }
blf_lib-derive = { path = "../blf_lib-derive", optional = true, version = "1.8.0-test-1" }
serde_json = "1.0.128"
serde = {  version = "1.0.210", features = ["serde_derive"] }
serde-big-array = "0.5.1"
widestring = "1.1.0"
serde-hex.workspace = true
hex = "0.4.3"
lazy_static = "1.5.0"
sha1 = "0.10.6"
chrono = "0.4.38"
binrw = "0.14.1"
num-traits = "0.2.19"
num-derive = "0.4.2"
flate2 = "1.0.35"
wasm-bindgen = "0.2.100"
napi = { features = ["serde-json", "napi6","napi1","napi2","napi3","napi4","napi5", "chrono_date"], git = "https://github.com/Blam-Network/napi-rs.git", optional = true }
napi-derive = { git = "https://github.com/Blam-Network/napi-rs.git", optional = true }
shrinkwraprs = "0.3.0"

[features]
default = ["derive"]
derive = ["dep:blf_lib-derive"]
napi = ["dep:napi", "dep:napi-derive"]
