[package]
name    = "blf_lib_js"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "2"
napi-derive = "2"
blf_lsp = { path = "../blf_lsp" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
