[package]
name = "blf_lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
blf_lib = { path = "../blf_lib", version = "1.7.0-pre23" }
napi        = "2"
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true

