[package]
name = "blf_lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
blf_lib = { path = "../blf_lib", version = "1.7.0-pre23" }
napi.workspace = true
napi-derive.workspace = true

[build-dependencies]
napi-build.workspace = true

[profile.release]
lto = true

