[package]
name = "blf_lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
blf_private = ["dep:blf_lib-private"]

[dependencies]
blf_lib = { path = "../blf_lib", version = "1.7.0-pre23", features = ["napi"] }
blf_lib-private = { path = "../../blf_private/blf_lib-private", features = ["napi"], optional = true }
napi = { features = ["serde-json", "napi6","napi1","napi2","napi3","napi4","napi5", "chrono_date"], path = "/Users/codiestella/code/napi-rs/crates/napi", optional = true }
napi-derive = { git = "https://github.com/Blam-Network/napi-rs.git"}
flate2 = "1.0.35"
bytes = "1.10.1"
serde = { version = "1.0.216", features = ["derive"] }
binrw = "0.14.1"
serde_json = "1.0.128"
serde-big-array = "0.5.1"
widestring = "1.1.0"
serde-hex.workspace = true
strum = "0.27.1"
strum_macros = "0.27.1"
num-traits = "0.2.19"
num-derive = "0.4.2"

[build-dependencies]
napi-build = { git = "https://github.com/Blam-Network/napi-rs.git" }

[profile.release]
lto = true

