[package]
name = "test_harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blf_lib = { path = "../blf_lib" }
flate2 = "1.1.5"
bytes = "1.10.1"
serde = { version = "1.0.228", features = ["derive"] }
binrw = "0.14.1"
serde_json = "1.0.145"
serde-big-array = "0.5.1"
widestring = "1.2.1"
serde-hex.workspace = true
strum = "0.27.2"
strum_macros = "0.27.2"
num-traits = "0.2.19"
num-derive = "0.4.2"

